<?xml version="1.0"?>
<package>
  <name>ndt_msgs</name>
  <version>0.4.0</version>
  <description>The ndt messages package</description>
  <maintainer email="todo@todo.com">Todo</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

  <export>    
  </export>
</package>
